adicionando pagina de perfil

--- a/exercicio-3/src/assets/css/homepage_completo.css
+++ b/exercicio-3/src/assets/css/homepage_completo.css
@@ -64,6 +64,7 @@ hr {
     background-color: #0d2350;
     border-radius: 12%;
     border-radius: 20px;
+    margin-left: 20px;
     padding: 5px 20px 5px 20px;
     bottom: 5px;
 }
